--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ all_files = 1
 
 [isort]
 multi_line_output=3
-known_third_party=elasticsearch_dsl,elasticsearch
+known_third_party=elasticsearch
 include_trailing_comma=True
 
 [flake8]
